# safetraceV2

./: Cargo.toml  README.md
blockchain/: docker-compose.yaml
contract/: .gitignore  Cargo.toml  Makefile  NOTICE
contract/examples/: schema.rs
contract/schema/: init_msg.json  query_msg.json
contract/src/: bucket.rs  contract.rs  geohash.rs  hotspotmap.rs  lib.rs  state.rs  time.rs
contract/tests/: gen_coordinates.py  query_data.sh  setup.sh
docs/: Api.md  Confidential Compute Platform.md  Contract.md  Installation.md  setup-sgx.md  test_report.md
src/: bucket.rs  contract.rs  data.rs  hotspotmap.rs  lib.rs  msg.rs  pointer.rs  state.rs  time.rs  trie.rs
tests/: gen_coordinates.py  query_data.sh  setup.sh
tests/data/: example.json  example2.json
ui/: package-lock.json  package.json
ui/src/: App.js  Maps.js
