[package]
name = "safetrace"
version = "0.1.0"
authors = ["bob"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { path = "../../GolandProjects/EnigmaBlockchain/cosmwasm/packages/std" }
cosmwasm-storage = { path = "../../GolandProjects/EnigmaBlockchain/cosmwasm/packages/storage" }
schemars = "0.7"
bincode2 = "2.0.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
rust_decimal = { version = "1.8.1" }
serde_json = { version = "1.0.57" }
geohash = "0.10.0"
radix_trie = { version = "0.2", features = ["serde"]}
